apps/play-manager-backend/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: play-manager-backend
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: play-manager-backend
  template:
    metadata:
      labels:
        app: play-manager-backend
    spec:
      containers:
        - name: backend
          image: julienprr/play-manager-backend:latest
          ports:
            - containerPort: 8000
