apps/play-manager-backend/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: play-manager-backend-ingress
  namespace: prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header X-Frame-Options "DENY";
      add_header X-Content-Type-Options "nosniff";
      add_header Strict-Transport-Security "max-age=63072000; includeSubDomains; preload";
      add_header Referrer-Policy "no-referrer";
      add_header Permissions-Policy "camera=(), microphone=(), geolocation=()";
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - play-manager-api.julienprr.com
        - www.play-manager-api.julienprr.com
      secretName: ssl-cert-play-manager-backend
  rules:
    - host: play-manager-api.julienprr.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: play-manager-backend
                port:
                  number: 80
    - host: www.play-manager-api.julienprr.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: play-manager-backend
                port:
                  number: 80
